chore(warnings): Reduce Warnings and Sonar Issues